# CA-MTL-YOLOv8

./: .gitignore  LICENSE  README.md  inspect_model.py  pyproject.toml
assets/docs/: dataset_stats.md
camtl_yolo/: __init__.py
camtl_yolo/cli/: train.py
camtl_yolo/data/: README.md  dataset_similarity_audit.py  holdout.py
camtl_yolo/data/config/: data.yaml
camtl_yolo/data/preprocess/: generator.py  pipeline.py
camtl_yolo/data/preprocess/config/: data.yaml
camtl_yolo/data/preprocess/modules/: arcade_stenosis.py  cadica.py  chasedb1.py  dca1.py  drive.py  fives.py  fs_cad.py  xcav.py
camtl_yolo/data/preprocess/tools/: bbox_converter.py  clahe.py  downsample_images.py  downsample_masks.py  fse.py  img_format.py  lowpass.py  preprocess_fundus.py  preprocess_xca.py  upsample_images.py  upsample_masks.py
camtl_yolo/model/: dataset.py  model.py  tasks.py
camtl_yolo/model/configs/: ca_mtl_yolov8.yaml
camtl_yolo/model/configs/data/: data.yaml
camtl_yolo/model/configs/hyperparams/: camtl.yaml  defaults.yaml  domainshift1.yaml
camtl_yolo/model/configs/models/: camtl_yolov8.yaml  domainshift1.yaml
camtl_yolo/model/engine/: train.py  val.py
camtl_yolo/model/losses/: __init__.py  align.py  consistency.py  detection.py  kl.py  lovasz_losses.py  regularizers.py  segmentation.py
camtl_yolo/model/nn/: __init__.py  csam.py  ctam.py  fpma.py  probmaskgater.py  seghead.py
camtl_yolo/model/utils/: debug_cycles.py  downsample_mask.py  ema.py  grad.py  metrics.py  normalization.py  plotting.py  samplers.py
camtl_yolo/scripts/: train.sh
camtl_yolo/scripts/picasso_config/data/: data.yaml
camtl_yolo/scripts/picasso_config/hyperparams/: defaults.yaml
camtl_yolo/scripts/picasso_config/models/: camtl_yolov8.yaml
camtl_yolo/tests/: test_engine_train_val.py  test_model_build.py  test_model_forward.py  test_model_loading.py
camtl_yolo/utils/: dataset_similarity_audit.py  logger.py
