[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camtl_yolo"
version = "0.1"
description = "Cross-Attention Multi-Task Learning for YOLOv8-based Object Detection and Segmentation"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Mario Pascual-González", email = "mpascual@uma.es"},
  {name = "Ezequiel López-Rubio", email = "eqzlr@uma.es"},
]

# ────────────── Runtime deps ──────────────
dependencies = [
  "pillow",
  "pyyaml",
  "tqdm",

  "numpy>=1.23.0",
  "matplotlib>=3.3.0",
  "opencv-python>=4.6.0",
  "scikit-image>=0.18.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0",
  "torch>=1.12.0",
  "torchvision>=0.13.0",
  "scikit-learn>=1.0.0",
  "scienceplots>=1.0.0",

]

[project.urls]
Homepage = "https://github.com/MarioPasc/CA-MLT-YOLOv8"

# NOTE: We vendor a modified copy of the ultralytics package (top-level 'ultralytics/' directory).
# To ensure it is installed together with CA-MLT-YOLO (and preferred on sys.path over any PyPI ultralytics),
# we include it explicitly below instead of declaring a dependency on upstream 'ultralytics'.
# Recommend installing in a fresh virtualenv to avoid conflicts with an already installed ultralytics wheel.

# ────────────── Setuptools discovery ──────

[tool.setuptools.packages.find]
# Discover our main package and the vendored top-level 'ultralytics' package
include = [
  "camtl_yolo",
  "camtl_yolo.*",
  "ultralytics",
  "ultralytics.*",
  "camtl_yolo.cli",
  "camtl_yolo.cli.*",
]

[tool.setuptools.package-dir]
ultralytics = "camtl_yolo/external/ultralytics/ultralytics"

[tool.setuptools.package-data]
"camtl_yolo.external.ultralytics" = ["*"]
"ultralytics" = ["*"]

[project.scripts]
"camtl_yolo.train" = "camtl_yolo.cli.train:main"
